# tf_idf

./: .gitignore  CHANGELOG.md  README.md  TFIDF.cabal  Tweets.txt  newTweetsWithoutSW.txt  stack.yaml
app/: Main.hs
src/: TFIDF.lhs
