cabal-version:       2.4
name:                TFIDF
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/ivanmoreau/boolean_model
bug-reports:         https://github.com/ivanmoreau/boolean_model/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Iván Molina Rebolledo
maintainer:          Iván Molina Rebolledo <ivanmolinarebolledo@gmail.com>
copyright:           2022 Iván Molina Rebolledo
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/ivanmoreau/boolean_model.git

common common-options
  build-depends:       base ^>= 4.14.0.0
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     TFIDF
  build-depends:       PrepTextos, text, containers, cereal, bytestring, cereal-text, parsec, BooleanModel

executable boolean_model
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       TFIDF, brick, microlens-th, microlens, text, vty, cmdargs, bytestring, cereal, cereal-text, containers, BooleanModel
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
